VM: no more fluid or axion

--- a/fortran/Makefile_main
+++ b/fortran/Makefile_main
@@ -9,7 +9,8 @@ NONLINEAR_FILES     ?= halofit SecondOrderPK
 
 #DHFS: BEGINS
 #OBS: Dark_Energy_PPF use Late_Dark_Energy so should compile the latter first, otherwise you get an error of "file not found"
-DARKENERGY_FILES  ?= DarkEnergyFluid LateDarkEnergy DarkEnergyPPF PowellMinimize DarkEnergyQuintessence
+#DARKENERGY_FILES  ?= DarkEnergyFluid LateDarkEnergy DarkEnergyPPF PowellMinimize DarkEnergyQuintessence
+DARKENERGY_FILES  ?= LateDarkEnergy DarkEnergyPPF PowellMinimize
 #DHFS: ENDS
 
 BISPECTRUM ?= SeparableBispectrum
