--- a/fortran/Makefile
+++ b/fortran/Makefile
@@ -29,11 +29,16 @@ NONNATIVE = 1
 endif
 
 #Will detect ifort/gfortran or edit for your compiler
-ifneq ($(COMPILER),gfortran)
-ifortErr = $(shell which ifort >/dev/null 2>&1; echo $$?)
-else
+#VM BEGINS
+#COCOA BEGINS
+#ifneq ($(COMPILER),gfortran)
+#ifortErr = $(shell which ifort >/dev/null 2>&1; echo $$?)
+#else
+#ifortErr = 1
+#endif
 ifortErr = 1
-endif
+#COCOA ENDS
+#VM ENDS
 
 ifeq "$(ifortErr)" "0"
 
@@ -85,12 +90,22 @@ FFLAGS += -mkl
 endif
 
 else
-gfortErr = $(shell which gfortran >/dev/null; echo $$?)
+#VM BEGINS
+#COCOA BEGINS
+#gfortErr = $(shell which gfortran >/dev/null; echo $$?)
+gfortErr = 0
+#COCOA ENDS
+#VM ENDS
 ifeq "$(gfortErr)" "0"
 #Gfortran compiler (version 6+):
-compiler_ver = $(shell gfortran -dumpversion 2>&1)
-COMPILER = gfortran
-F90C     = gfortran
+#VM BEGINS
+#COCOA BEGINS
+#COMPILER = gfortran
+#F90C     = gfortran
+COMPILER ?= $(FORTRAN_COMPILER)
+F90C     ?= $(FORTRAN_COMPILER)
+#COCOA ENDS
+#VM ENDS
 COMMON_FFLAGS = -MMD -cpp -ffree-line-length-none -fmax-errors=4 -fopenmp
 # Using -ffast-math causes differences between Debug and Release configurations.
 FFLAGS = -O3 $(COMMON_FFLAGS)
