--- a/fortran/Makefile
+++ b/fortran/Makefile
@@ -128,7 +128,7 @@ NONNATIVE = 1
 endif
 ifndef NONNATIVE
 #Note this seems to make code slightly slower in some cases, use CLUSTER_SAFE=1 to test without
-FFLAGS+=-march=native
+#FFLAGS+=-march=native
 endif
 endif
 endif
