change in halofit threshold ( 1.0e-3 -> 7.5e-4) for redshift > 3.0

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ camb/HighLExtrapTemplate_lenspotentialCls.dat
 .vscode/
 docs/*.txt
 docs/*.pdf
+fortran/halofit_multifluid.f90
+fortran/halofit_vivian_diogo_test.f90
